--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>dataspi-react</title>
-    <link rel="stylesheet" href="/static/bootstrap.css">
+    <!-- <link rel="stylesheet" href="/static/bootstrap.css"> -->
     <link rel="stylesheet" href="/static/antd.min.css">
+    <link rel="stylesheet" href="/static/reset.css">
+
+    <style>
+      html,body,#app{
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
